Visual differentiation of aegypti classes

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -312,8 +312,8 @@
                             <strong>Aedes certainty:</strong><br>
                             <select id="aedes_certainty_value_{{ form.instance.id }}">
                                 <option value="">--------------</option>
-                                <option value="4">Definitely Aedes aegypti</option>
-                                <option value="3">Probably Aedes aegypti</option>
+                                <option class="red" value="4">Definitely Aedes aegypti</option>
+                                <option class="red" value="3">Probably Aedes aegypti</option>
                                 <option value="2">Definitely Aedes albopictus</option>
                                 <option value="1">Probably Aedes albopictus</option>
                                 <option value="0">Not sure</option>
