--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -292,6 +292,11 @@
         {% block report_title_status_row %}
             <div class="row">
                 <div class="col-md-12">
+                    {% if form.instance.simplified_annotation == True %}
+                    <strong>This is a simplified report - </strong>
+                    {% else %}
+                    <strong>This is a full report - </strong>
+                    {% endif %}
                     <strong>Who has this report? </strong> {{ form.instance.report.get_who_has_bootstrap | safe }}
                 </div>
             </div>
@@ -322,7 +327,7 @@
                             </select>
                         </div>
                     </div>
-
+                    {% if form.instance.simplified_annotation == False %}
                     <div class="form-group">
                         <label>Public Note:</label>
                         <div>
@@ -336,6 +341,8 @@
                             <textarea id="public_note_{{ form.instance.id }}" cols="40" rows="4"></textarea>
                         </div>
                     </div>
+                    {% endif %}
+
 
 
                     {% form form using "floppyforms/layouts/bootstrap.html" %}
@@ -373,14 +380,14 @@
                     {% if form.instance.report.type == 'adult' %}
                         <strong>Aedes Certainty:</strong><br>
                         <div style="border:1px solid #333333;padding:2px;">
-                            {% if form.instance.tiger_certainty_category == -2 and form.instance.aegypti_certainty_category == 2 %}
-                                {{ form.instance.get_aegypti_certainty_category_display }}
-                            {% elif form.instance.tiger_certainty_category == -1 and form.instance.aegypti_certainty_category == 1 %}
-                                {{ form.instance.get_aegypti_certainty_category_display }}
-                            {% elif form.instance.tiger_certainty_category == 2 and form.instance.aegypti_certainty_category == -2 %}
+                            {% if form.instance.tiger_certainty_category == 2 %}
                                 {{ form.instance.get_tiger_certainty_category_display }}
-                            {% elif form.instance.tiger_certainty_category == 1 and form.instance.aegypti_certainty_category == -1 %}
+                            {% elif form.instance.tiger_certainty_category == 1 %}
                                 {{ form.instance.get_tiger_certainty_category_display }}
+                            {% elif form.instance.aegypti_certainty_category == 2 %}
+                                {{ form.instance.get_aegypti_certainty_category_display }}
+                            {% elif form.instance.aegypti_certainty_category == 1 %}
+                                {{ form.instance.get_aegypti_certainty_category_display }}
                             {% elif form.instance.tiger_certainty_category == 0 and form.instance.aegypti_certainty_category == 0 %}
                                 {{ form.instance.get_tiger_certainty_category_display }}
                             {% elif form.instance.tiger_certainty_category == -1 and form.instance.aegypti_certainty_category == -1 %}
@@ -402,7 +409,7 @@
                         <br>
                         <strong>Internal Site Certainty Notes:</strong><br>
                         <div style="overflow: auto;height: 150px;border:1px solid #333333;padding:2px;">
-                            {{ form.instance.site_certainty_notees }}</div><br>
+                            {{ form.instance.site_certainty_notes }}</div><br>
                     {% endif %}
 
                     <strong>Public Note:</strong><br>
@@ -548,7 +555,7 @@
                 var this_id = "{{ form.instance.id }}";
 
                 //var hidden_form_fields{{ form.instance.id }} = $("#{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }}, #" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + "{{ form.aegypti_certainty_category.auto_id }}, #" + validation_complete_id_{{ form.instance.id }});
-                var hidden_form_fields{{ form.instance.id }} = $("#{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }}, #" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "aedes_certainty_value_{{ form.instance.id }}, #" + validation_complete_id_{{ form.instance.id }});
+                var hidden_form_fields{{ form.instance.id }} = $("#{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }}, #" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "aedes_certainty_value_{{ form.instance.id }}, #" + "public_note_{{ form.instance.id }}, #" + validation_complete_id_{{ form.instance.id }});
 
                 var hidden_photo_fields{{ form.instance.id }} = $("#div_for_photo_to_display_report_" + "{{ form.instance.report.version_UUID }}," + "#clear_button_" + "{{ form.instance.id }}");
 
@@ -1046,6 +1053,12 @@
                 id_to_index[$("#id_form-" + i + "-id").val()] = i;
             }
             {% for form in formset %}
+
+                var hidden_photo_fields{{ form.instance.id }} = $("#div_for_photo_to_display_report_" + "{{ form.instance.report.version_UUID }}," + "#clear_button_" + "{{ form.instance.id }}");
+                {% if form.instance.simplified_annotation == True %}
+                    hidden_photo_fields{{ form.instance.id }}.hide();
+                {% endif %}
+
                 inputToAedesValue('{{ form.instance.id }}');
                 $("#aedes_certainty_value_{{ form.instance.id }}").change(function(){
                     aedesValueToInput($(this).val(),'{{ form.instance.id }}');
