--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -341,6 +341,12 @@
                             <textarea id="public_note_{{ form.instance.id }}" cols="40" rows="4"></textarea>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label>Message to User:</label>
+                        <div class="controls field-message_to_user" data-placement="top" title="" data-toggle="tooltip" data-original-title="">
+                            <textarea id="message_to_user_{{ form.instance.id }}" cols="40" rows="4"></textarea>
+                        </div>
+                    </div>
                     {% endif %}
 
 
@@ -987,6 +993,11 @@
             $("#public_note_" + input_id).val(note);
         }
 
+        function inputToUserMessageValue(input_id){
+            var message = getUserMessage(input_id);
+            $("#message_to_user_" + input_id).val(message);
+        }
+
         function inputToAedesValue(input_id){
             var i = 0;
             var tiger_val = getTigerCertainty(input_id);
@@ -1032,6 +1043,12 @@
             return retVal;
         }
 
+        function getUserMessage(input_id){
+            var control_name = "id_form-" + id_to_index[input_id] + "-message_for_user";
+            var retVal = $('#'+control_name).val();
+            return retVal;
+        }
+
         function getTigerCertainty(input_id){
             var control_name = "id_form-" + id_to_index[input_id] + "-tiger_certainty_category";
             var retVal = $('#'+control_name).val();
@@ -1064,6 +1081,7 @@
                     aedesValueToInput($(this).val(),'{{ form.instance.id }}');
                 });
                 inputToPublicNoteValue('{{ form.instance.id }}');
+                inputToUserMessageValue('{{ form.instance.id }}');
                 $("#btn_gp_{{ form.instance.id }}").click(function() {
                     var message = "Muy buena foto. Gracias por participar.";
                     $("#public_note_{{ form.instance.id }}").val(message);
@@ -1092,6 +1110,9 @@
                 $("#public_note_{{ form.instance.id }}").unbind();
                 $("#public_note_{{ form.instance.id }}").on('input', function (e) {
                     $("#id_form-" + id_to_index[{{ form.instance.id }}] + "-edited_user_notes").val($(this).val());
+                });
+                $("#message_to_user_{{ form.instance.id }}").on('input', function (e) {
+                    $("#id_form-" + id_to_index[{{ form.instance.id }}] + "-message_for_user").val($(this).val());
                 });
             {% endfor %}
         });
